--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -10,6 +10,7 @@
 @import "partials/brand";
 @import "partials/search";
 @import "partials/carousel";
+@import "partials/countyInformation";
 @import "partials/social";
 @import "partials/footer";
 
