--- a/assets/stylesheets/partials/_base.scss
+++ b/assets/stylesheets/partials/_base.scss
@@ -4,7 +4,7 @@ $default-font-family: Arial, Helvetica, sans-serif;
 
 html, body {
 	background: $light-gray;
-	color: $dark-gray;
+	color: $base-font-color;
 	font-family: $default-font-family;
 	margin: 0;
 	padding: 0;
