--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -13,6 +13,7 @@
 @import "partials/countyInformation";
 @import "partials/social";
 @import "partials/footer";
+@import "partials/news";
 
 /* Third Party */
 @import "vendor/slick-carousel";
