Updated paths to remove errros

--- a/assets/stylesheets/partials/_base.scss
+++ b/assets/stylesheets/partials/_base.scss
@@ -1,6 +1,6 @@
 $default-font-family: Arial, Helvetica, sans-serif;
 
-@import "modules/all";
+@import "../modules/all";
 
 html, body {
 	background: $light-gray;
