--- a/assets/stylesheets/partials/_news.scss
+++ b/assets/stylesheets/partials/_news.scss
@@ -3,3 +3,19 @@
 		font-weight: 900;
 	}
 }
+.feedDetails{
+	.h1{display:none;}
+	.description{display:none;}
+}
+.feedItems{
+	.item{
+	float: left;
+    padding: 0 1.5em 0 0;
+    width: 45%;
+    }
+}
+ol.feedItems{
+	margin:0;
+	padding:0;
+	list-style-type:none;
+}
