--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -1,10 +1,12 @@
 @import url(http://fonts.googleapis.com/css?family=Patua+One);
 
+/*Resets*/
+@import "partials/normalize";
+
 /* Modules and Variables */
 @import "partials/base";
 
 /* Partials */
-@import "partials/normalize";
 @import "partials/grid";
 @import "partials/typography";
 @import "partials/lists";
