--- a/assets/stylesheets/partials/_typography.scss
+++ b/assets/stylesheets/partials/_typography.scss
@@ -11,13 +11,15 @@ p {
 small {
     font-size: 85%;
 }
-h2.homepage{
+
+.homepage h2 {
     font-size:2.083em;
     color:#c51110;
     border-top:5px solid #ebebeb;
     border-bottom:1px solid #ebebeb;
     padding:7px 0;
 }
+
 h1, h2{
     font-family:Patua One;
     color:dark-gray;
