Added elected official styles

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -15,6 +15,7 @@
 @import "partials/search";
 @import "partials/carousel";
 @import "partials/countyInformation";
+@import "partials/electedOfficials";
 @import "partials/social";
 @import "partials/footer";
 @import "partials/news";
