--- a/assets/stylesheets/partials/_base.scss
+++ b/assets/stylesheets/partials/_base.scss
@@ -2,6 +2,10 @@ $default-font-family: Arial, Helvetica, sans-serif;
 
 @import "../modules/all";
 
+* {
+	box-sizing: border-box;
+}
+
 html, body {
 	background: $light-gray;
 	color: $base-font-color;
