--- a/assets/stylesheets/modules/_utility.scss
+++ b/assets/stylesheets/modules/_utility.scss
@@ -7,3 +7,17 @@
 		display: inline;
 	}
 }
+
+.clearfix:before,
+.clearfix:after {
+    content: "";
+    display: table;
+}
+ 
+.clearfix:after {
+    clear: both;
+}
+ 
+.clearfix {
+    *zoom: 1;
+}
