--- a/assets/stylesheets/partials/_social.scss
+++ b/assets/stylesheets/partials/_social.scss
@@ -1,5 +1,4 @@
-.social-media {
-	background: $dark-gray;
+.social-media-list {
 	list-style-type: none;
 	padding: 20px 10px;
 	text-align: center;
@@ -8,24 +7,35 @@
 		color: $white;
 	}
 
-	.social-media-list-item {
+	
+}
+.social-media-list-item {
+	height: 38px;
+	width: 38px;
+
+	margin-right: 20px;
+
+	a {
+		border: none;
+		display: block;
+		text-decoration: none;
+
 		height: 38px;
-		width: 38px;
+		width: 38px;	
 	}
 }
-
 .social-media-list-item-facebook {
 	background: url(../../assets/img/social-icons-sprite.png) 0 0;
 }
 .social-media-list-item-twitter {
-	background: url(../../assets/img/social-icons-sprite.png) 38 0;
+	background: url(../../assets/img/social-icons-sprite.png) -38px 0;
 }
 .social-media-list-item-photos {
-	background: url(../../assets/img/social-icons-sprite.png) 76 0;
+	background: url(../../assets/img/social-icons-sprite.png) -76px 0;
 }
 .social-media-list-item-youtube {
-	background: url(../../assets/img/social-icons-sprite.png) 114 0;
+	background: url(../../assets/img/social-icons-sprite.png) -114px 0;
 }
 .social-media-list-item-bcnow {
-	background: url(../../assets/img/social-icons-sprite.png) 152 0;
+	background: url(../../assets/img/social-icons-sprite.png) -152px 0;
 }
