--- a/assets/stylesheets/partials/_footer.scss
+++ b/assets/stylesheets/partials/_footer.scss
@@ -20,7 +20,7 @@ footer {
 		padding: 0;
 	}
 	.primary-footer, .secondary-footer {
-		padding: 20px 10px;
+		padding: 20px 0;
 	}
 	.secondary-footer {
 		background: $red;
