--- a/assets/stylesheets/partials/_carousel.scss
+++ b/assets/stylesheets/partials/_carousel.scss
@@ -1,27 +1,54 @@
-.carousel {
-	position: relative;
+.promotions {
+  a {
+  	color: $gold;
+  }
 
-	img {
-		height: 300px;
-		width: 100%;
-	}
+  img {
+  	padding: 0;
+  	margin: 0;
+  }
+
+  h2 {
+  	border: none;
+  	color: $white;
+  	margin: 0;
+  }
+
+  .promotions-item {
+    position: relative;
+  }
+  .promotion-image {
+    width: 100%;
+  }
+  .promotions-message {
+    position: absolute;
+    bottom: 0;
+    
+    background: rgba(#444,.9);
+    color: $white;
+    padding: 10px 40px;
+    width: 100%;
+    
+  }
+}
+
+.slick-dots {
+	bottom: 25px;
+	right: 50px;
+	text-align: right;
+}
+
+.slick-dots li button:before {
+	position: absolute;
+	top: 0;
+	right: 50px;
+	width: 20px;
+	height: 20px;
+	font-family: "slick";
+	line-height: 52px;
 	
-	.carousel-message {
-		position: absolute;
-		bottom: 10%;
-		margin-left: 20px;
-		padding: 10px;
-		
-		background: rgba($dark-gray, .9);
-		color: white;
-	}
-	.carousel-item-headline {
-		color: $white;
-		margin: 0;
-		
-	}
-	.carousel-item-description {
-		
-	}
-
+	color: $white;
+	opacity: 0.25;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
