Updated promotion style to match psd

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -16,7 +16,7 @@
 @import "partials/header";
 @import "partials/brand";
 @import "partials/search";
-@import "partials/carousel";
+@import "partials/promotions";
 @import "partials/countyInformation";
 @import "partials/electedOfficials";
 @import "partials/social";
