--- a/assets/stylesheets/partials/_promotions.scss
+++ b/assets/stylesheets/partials/_promotions.scss
@@ -1,11 +1,28 @@
+.promotions-container {
+  position: relative;
+
+  .search {
+    position: absolute;
+    left: 50%;
+    z-index: 999;
+
+    transform: translateX(-50%);
+  }  
+}
+
 .promotions {
   margin: 0;
 
   a {
   	color: $gold;
   }
+  
+  p {
+    margin-bottom: 0;
+  }
 
   img {
+    border: none;
   	padding: 0;
   	margin: 0;
   }
@@ -13,7 +30,11 @@
   h2 {
   	border: none;
   	color: $white;
-  	margin: 0;
+    
+    font-size: 2.6em;
+    
+  	margin: 10px 0;
+    text-transform: uppercase;
   }
 
   .promotions-item {
@@ -28,7 +49,7 @@
     
     background: rgba(#444,.9);
     color: $white;
-    padding: 10px 40px;
+    padding: 20px 40px;
     width: 100%;
     
   }
