--- a/assets/stylesheets/partials/_brand.scss
+++ b/assets/stylesheets/partials/_brand.scss
@@ -1,8 +1,26 @@
 .brand {
-	h1 {
+  display: inline-block;
+  float: left;
+  padding: 0;
+  
+  h1 {
 		color: $white;
 	}
 	img {
 		border: none;
 	}
+
+  .brand-logo, .brand-heading {
+    display: inline-block;
+    padding: 0;
+    vertical-align: middle;
+  }
+  
+  .brand-heading {
+    font-size: 1.7em;
+  }
+  
+  .brand-logo {
+    margin-right: 20px;
+  }
 }
