--- a/assets/stylesheets/partials/_brand.scss
+++ b/assets/stylesheets/partials/_brand.scss
@@ -12,12 +12,14 @@
 
   .brand-logo, .brand-heading {
     display: inline-block;
-    padding: 0;
+    
     vertical-align: middle;
   }
   
   .brand-heading {
     font-size: 1.7em;
+    line-height: 28px;
+    padding: 15px 0;
   }
   
   .brand-logo {
