--- a/assets/stylesheets/partials/_header.scss
+++ b/assets/stylesheets/partials/_header.scss
@@ -24,6 +24,9 @@ header {
 
 		a {
 			color: $light-gray;
+      display: block;
+      font-size: 14px;
+      line-height: 11px;
 
 			&:hover {
 				color: $white;
@@ -98,10 +101,11 @@ header {
     }
     
     a {
-       background: url('http://staging.baltimorecountymd.gov/Redesign/assets/images/little-arrow.png') no-repeat 12.5px 37px;
+      background: url('../../assets/img/little-arrow.png') no-repeat 12.5px 37px;
       color: white;
       display: block;
-      padding: 30px 0px 37px 40px;
+      line-height: 22px;
+      padding: 35px 0px 33px 40px;
       text-decoration: none;
     }
   }
