--- a/assets/stylesheets/partials/_footer.scss
+++ b/assets/stylesheets/partials/_footer.scss
@@ -24,6 +24,12 @@ footer {
 		margin: 0;
 		padding: 0;
 	}
+
+	.primary-footer {
+		h2 {
+			margin: 0;
+		}
+	}
 	.primary-footer, .secondary-footer {
 		padding: 20px 0;
 	}
@@ -36,4 +42,16 @@ footer {
 			padding: 0 5px;
 		}
 	}
+}
+
+.county-map-container {
+	@extend .clearfix;
+}
+
+.county-map, .county-address {
+	float: left;
+}
+
+.county-map {
+	padding: 0 30px 0 0;
 }
