--- a/assets/stylesheets/partials/_footer.scss
+++ b/assets/stylesheets/partials/_footer.scss
@@ -17,6 +17,8 @@ footer {
 
 	img {
 		border:none;
+		padding: 0;
+		margin: 0;
 	}
 
 	ul, ol {
@@ -54,4 +56,8 @@ footer {
 
 .county-map {
 	padding: 0 30px 0 0;
+}
+
+.county-awards-list-item {
+	padding-top: 15px;
 }
