changed positioning of social icons under CE

--- a/assets/stylesheets/partials/_social.scss
+++ b/assets/stylesheets/partials/_social.scss
@@ -8,6 +8,12 @@
 
 	
 }
+
+.county-executive{
+	.social-media-list{
+		text-align:left;
+	}
+}
 .social-media-list-item {
 	height: 37px;
 	width: 37px;
