removed border from last child of copyright links

--- a/assets/stylesheets/partials/_footer.scss
+++ b/assets/stylesheets/partials/_footer.scss
@@ -75,6 +75,9 @@ footer {
 		.county-links-list-item{
 			border-right: 1px solid $white;
 			padding: 0 5px;
+			&:last-child {
+				border-right:none;
+			}
 		}
 	}
 }
