added class for "news-feed-read-more"

--- a/assets/stylesheets/partials/_news.scss
+++ b/assets/stylesheets/partials/_news.scss
@@ -1,4 +1,4 @@
-/*Contains the stylse for Baltimore County Now*/
+/*Contains the styles for Baltimore County Now*/
 .news {
   .news-headline {
     font-weight: 900;
@@ -57,4 +57,8 @@ information on the homepage*/
   .extras {
     display: none;
   }
+}
+
+.news-feed-read-more{
+    
 }
