--- a/assets/stylesheets/partials/_electedOfficials.scss
+++ b/assets/stylesheets/partials/_electedOfficials.scss
@@ -3,6 +3,8 @@
 		margin: 0 0 20px;
 		width: 100%;
 	}
+	border-left:2px dotted $light-gray;
+	padding:0 0 0 20px;
 }
 
 .county-executive-about-list {
