--- a/assets/stylesheets/partials/_countyInformation.scss
+++ b/assets/stylesheets/partials/_countyInformation.scss
@@ -1,6 +1,7 @@
 .county-information {
 	background: $white;
 	padding-bottom: 25px;
+	padding-top:25px;
 
 	h2 {
 	    font-size:2.083em;
@@ -8,5 +9,6 @@
 	    border-top:5px solid #ebebeb;
 	    border-bottom:1px solid #ebebeb;
 	    padding:7px 0;
+	    margin:0 0 30px;
 	}
 }
