--- a/assets/stylesheets/partials/_electedOfficials.scss
+++ b/assets/stylesheets/partials/_electedOfficials.scss
@@ -4,11 +4,11 @@
 		width: 100%;
 	}
 	border-left:3px dotted $light-gray;
-	padding:0 0 0 25px;
+	padding:0 0 50px 25px;
 }
 
 .county-executive-about-list {
-	padding: 10px 0;
+	padding: 10px 0 30px;
 	
 	.county-executive-about-list-item {
 		padding: 0 10px;
