--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Patua+One);
+@import url(http://fonts.googleapis.com/css?family=Raleway:700);
 
 /*Resets*/
 @import "partials/normalize";
