--- a/assets/stylesheets/partials/_brand.scss
+++ b/assets/stylesheets/partials/_brand.scss
@@ -20,9 +20,11 @@
     font-size: 1.7em;
     line-height: 28px;
     padding: 15px 0;
+    font-family:Raleway;
+    letter-spacing:.4px;
   }
   
   .brand-logo {
-    margin-right: 20px;
+    margin-right: 10px;
   }
 }
