--- a/assets/stylesheets/partials/_header.scss
+++ b/assets/stylesheets/partials/_header.scss
@@ -86,7 +86,7 @@ header {
     }
     
     .primary-nav-item__headline {
-      letter-spacing: 1px;
+      letter-spacing: .5px;
       margin: 0;
       
     }
