--- a/assets/stylesheets/partials/_search.scss
+++ b/assets/stylesheets/partials/_search.scss
@@ -64,3 +64,22 @@
     }
   }
 }
+
+/*Alert Box*/
+.alert{
+  a{
+    text-decoration:none;
+  }
+  a:hover{
+    color:#003399;
+  }
+   h1{
+    font-family:$default-font-family;
+    font-weight:bold;
+   }
+  background-color:$gold;
+  font-family:$default-font-family;
+  font-size:.6em;
+  margin:-20px 0 10px;
+  text-align:center;
+}
