Added borders for H1

--- a/assets/stylesheets/partials/_typography.scss
+++ b/assets/stylesheets/partials/_typography.scss
@@ -48,6 +48,8 @@ h1{
     font-size:2.083em;
     color:#c51110;
     padding:7px 0;
+    border-top:5px solid #ebebeb;
+    border-bottom:1px solid #ebebeb;
 }
 h2{
     font-size:1.6em;
