--- a/assets/stylesheets/partials/_brand.scss
+++ b/assets/stylesheets/partials/_brand.scss
@@ -20,9 +20,10 @@
   .brand-heading {
     font-size: 1.7em;
     line-height: 28px;
-    padding: 15px 0;
+    padding: 20px 0;
     font-family:Raleway;
     letter-spacing:.4px;
+    margin: 13px 0 0;
   }
   
   .brand-logo {
