--- a/assets/stylesheets/partials/_typography.scss
+++ b/assets/stylesheets/partials/_typography.scss
@@ -50,6 +50,7 @@ h1{
     padding:7px 0;
     border-top:5px solid #ebebeb;
     border-bottom:1px solid #ebebeb;
+    margin:0 0 13px;
 }
 h2{
     font-size:1.6em;
