--- a/assets/stylesheets/partials/_electedOfficials.scss
+++ b/assets/stylesheets/partials/_electedOfficials.scss
@@ -5,10 +5,15 @@
 	}
 	border-left:3px dotted $light-gray;
 	padding:0 0 50px 25px;
+
+
+	.social-media-list {
+		margin-bottom: 20px;
+	}
 }
 
 .county-executive-about-list {
-	padding: 10px 0 30px;
+	padding: 0px 0 20px;
 	
 	.county-executive-about-list-item {
 		padding: 0 10px;
