--- a/assets/stylesheets/partials/_typography.scss
+++ b/assets/stylesheets/partials/_typography.scss
@@ -12,57 +12,43 @@ small {
     font-size: 85%;
 }
 
+
+h1, h2, h3, h4, h5, h6 {
+    color: $dark-gray;
+    font-weight:normal;
+}
+
 h1, h2{
-    font-family:Patua One;
-    color:dark-gray;
-    font-weight:normal;
+    font-family:Patua One;   
 }
-
-h3,h4,h5{
-    font-family:$default-font-family;
-    color:$dark-gray;
-    font-weight:normal;
-}
-
-
-h1{
-    line-height:40px;
-}
-h2{
-    line-height:30px;
-}
-h3{
-    line-height:30px;
-    font-weight:bold;
-}
-h4{
-    line-height:20px;
-    font-weight:bold;
-}
-h5{
-    line-height:20px;
-    font-weight:bold;
+h3, h4, h5 {
+    font-weight: bold;
 }
 
 h1{
     font-size:2.083em;
-    color:#c51110;
-    padding:7px 0;
-    border-top:5px solid #ebebeb;
-    border-bottom:1px solid #ebebeb;
-    margin:0 0 13px;
+    line-height:40px;
 }
 h2{
+    border-top:5px solid #ebebeb;
+    border-bottom:1px solid #ebebeb;
+    color:#c51110;
     font-size:1.6em;
+    line-height:30px;
+    margin:0 0 13px;
+    padding:7px 0;    
 }
 h3{
     font-size:1.2em;
+    line-height:30px;
 }
 h4{
     font-size:1.1em;
+    line-height:20px;
 }
 h5{
     font-size:1em;
+    line-height:20px;
 }
 
 a {
@@ -71,6 +57,7 @@ a {
         color: $gold;
     }
 }
+
 .uppercase{
     text-transform:uppercase;
 }
