--- a/assets/stylesheets/partials/_news.scss
+++ b/assets/stylesheets/partials/_news.scss
@@ -13,7 +13,7 @@
   .item {
     float: left;
     padding: 0 1.5em 0 0;
-    width: 45%;
+    width: 50%;
   }
   .pub-date{
     font-weight:900;
@@ -25,7 +25,7 @@
     color: $dark-gray;
     font-weight:normal;
     font-size:1.3em;
-    margin: 25px 0 7px;
+    margin: 25px 0 0;
   }
   h3 a{
     color:$dark-gray;
