removed border on alert

--- a/assets/stylesheets/partials/_alert.scss
+++ b/assets/stylesheets/partials/_alert.scss
@@ -11,7 +11,8 @@
   h1{
     font-family:$default-font-family;
     font-weight:bold;
-    border:none;
+    border-top:none;
+    border-bottom:none;
   }
   
   background-color:$gold;
