--- a/assets/stylesheets/partials/_brand.scss
+++ b/assets/stylesheets/partials/_brand.scss
@@ -3,6 +3,14 @@
   float: left;
   padding: 0;
   
+  a{
+    text-decoration:none;
+    &:hover{
+      text-decoration:none;
+    }
+
+  }
+
   h1 {
 		color: $white;
     border:none;
