Fixed padding on lists.

--- a/assets/stylesheets/modules/_utility.scss
+++ b/assets/stylesheets/modules/_utility.scss
@@ -6,6 +6,12 @@
 	li {
 		display: inline;
 
+		padding: 0 10px;
+		
+		&:first-child {
+			padding-left: 0;
+		}
+
 		a {
 			display: block;
 			line-height: 12px;
