--- a/assets/stylesheets/partials/_textResizer.scss
+++ b/assets/stylesheets/partials/_textResizer.scss
@@ -4,17 +4,24 @@
 
 .resizer-list {
   display: inline-block;
-  margin: 0 0 10px 0;
+  margin: 0;
   vertical-align: middle;
   
   li, li:first-child {
     padding: 5px;
   }
+
+  li {
+    button {
+      color: $light-gray;
+      text-decoration: underline;
+    }
+  }
 }
 
 .resizer-item {
   font-weight: bold;
-  line-height: 29px;
+  line-height: 34px;
 }
 .resizer-item-smaller {
   font-size: 1.6em;
