--- a/assets/stylesheets/partials/_promotions.scss
+++ b/assets/stylesheets/partials/_promotions.scss
@@ -1,7 +1,7 @@
 .promotions-container {
   position: relative;
 
-  .search {
+  .search-container {
     position: absolute;
     left: 50%;
     z-index: 999;
