--- a/assets/stylesheets/partials/_header.scss
+++ b/assets/stylesheets/partials/_header.scss
@@ -116,3 +116,25 @@ header {
   display: inline-block;
   padding-right: 10px;
 }
+
+@media only screen and (min-width: 960px) and (max-width: 1199px) {
+.primary-nav .primary-nav-item a {
+    padding: 35px 5px 33px 35px;
+    width: auto;
+}
+
+.primary-nav h2 {
+    font-size: 1.6em;
+    min-width: 200px;
+}
+
+.primary-nav .primary-nav-item {
+    min-width: 30%;
+}
+
+.primary-nav {
+    font-size: 80%;
+}
+
+
+}
