Added a hex color for older browsers

--- a/assets/stylesheets/partials/_promotions.scss
+++ b/assets/stylesheets/partials/_promotions.scss
@@ -47,6 +47,7 @@
     position: absolute;
     bottom: 0;
     
+    background-color: #555;
     background: rgba(#444,.9);
     color: $white;
     padding: 20px 40px;
