--- a/assets/stylesheets/partials/_header.scss
+++ b/assets/stylesheets/partials/_header.scss
@@ -155,15 +155,16 @@ header {
 
 .promotions-container .search-container{
 background:none;
-position:relative;
-left:0;
-transform:none;
+position:relative !important;
+left:0 !important;
+transform:none !important;
 }
 
 .top-visited-list li{
   border-bottom: 1px solid #666;
-      display: block;
+  display: block;
 }
+
 .top-visited-list{
 width:100%;
 }
