--- a/assets/stylesheets/partials/_search.scss
+++ b/assets/stylesheets/partials/_search.scss
@@ -63,3 +63,25 @@
     }
   }
 }
+
+
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+
+.promotions-container .search-container{
+background:none;
+position:relative !important;
+left:0 !important;
+transform:none !important;
+}
+
+.top-visited-list li{
+  border-bottom: 1px solid #666;
+  border-right: none !important;
+  display: block !important;
+}
+
+.top-visited-list{
+width:100%;
+}
+
+}
