--- a/assets/stylesheets/partials/_search.scss
+++ b/assets/stylesheets/partials/_search.scss
@@ -69,15 +69,15 @@
 
   .promotions-container .search-container {
     background:none;
-    position:relative !important;
-    left:0 !important;
-    transform:none !important;
+    position:relative;
+    left:0;
+    transform:none;
   }
 
   .top-visited-list li {
     border-bottom: 1px solid #666;
-    border-right: none !important;
-    display: block !important;
+    border-right: none;
+    display: block;
   }
 
   .top-visited-list {
