--- a/assets/stylesheets/partials/_search.scss
+++ b/assets/stylesheets/partials/_search.scss
@@ -74,22 +74,35 @@
     transform:none;
   }
 
-<<<<<<< Updated upstream
+.search-container{
+  margin:20px auto;
+  width:768px;
+}
+
+.top-visited-label{
+  background-color: #ccc;
+  padding:10px;
+  width:100%;
+}
+
   .top-visited-list li {
-    border-bottom: 1px solid #666;
+    border-bottom: 1px solid $dark-gray;
     border-right: none;
     display: block;
+    text-align:left;
+    padding:0;
   }
-=======
-.top-visited-list li{
-  border-bottom: 1px solid $dark-gray;
-  border-right: none !important;
-  display: block !important;
-}
->>>>>>> Stashed changes
 
   .top-visited-list {
     width:100%;
+  }
+
+  .search{
+    padding:0;
+    .inline-list li a{
+      padding:10px 0;
+    }
+
   }
 
 }
